tests/NormalTests/paczka1/fuzzy1/24844741.err
Error in line 7: A606 A466 91,4
Error in line 8: Thf7 A606 10,0
Error in line 26: A606 A606 5,1
